# TelegramVoiceAI

./: .env.template  .gitignore  Dockerfile.railway  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose-prod.yaml
src/: Dockerfile  alembic.ini  app.py  config.py  pyproject.toml
src/data_access/: __init__.py  db_connector.py  exceptions.py  redis.py
src/data_access/dal/: __init__.py  threads.py  user.py
src/data_access/dto/: __init__.py  user.py
src/data_access/migrations/: env.py
src/data_access/models/: __init__.py  base.py  user.py
src/filters/: __init__.py  is_private.py
src/handlers/: __init__.py  photo.py  start.py  voice.py
src/services/: __init__.py  exceptions.py  photo.py  user.py  utils.py  voice.py
src/services/api_services/: __init__.py  amplitude.py  openai.py
src/states/: __init__.py  user.py
