[tool.poetry]
name = "telegramvoiceai"
version = "0.1.0"
description = ""
authors = ["san0kq <sanromanov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.6.0"
pydantic-settings = "^2.2.1"
openai = "^1.30.5"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
